<resources>
    <string name="app_name">Coursera</string>
    <string name="nombre">Nombre Completo</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirm">Confirmar Datos</string>
    <string name="editar">Editar Datos</string>
</resources>
